--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -19,3 +19,78 @@ p
 {
     color: blueviolet;
 }
+
+.container
+{
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu li
+{
+    display: inline;
+    padding: 20px;
+}
+
+.menu li a
+{
+    text-decoration: none;
+    color: black;
+    
+}
+
+.menu li a:hover
+{
+    color: grey;
+}
+#textoIntro
+{
+    padding: 30px;
+}
+
+.br-50
+{
+    border-radius: 50%;
+}
+
+.wh
+{
+    width: 500px;
+    height: 500px;
+}
+
+.center
+{
+    text-align: center;
+}
+.black
+{
+    color: black;
+}
+
+ .footIcon
+ {
+    width: 50px; height: 50px;
+ }
+
+ .pd-30
+ {
+    padding: 30px;
+ }
+ 
+ .hoverGrey:hover
+ {
+    color: grey;
+
+ }
+ .noTextDecoration
+ {
+    text-decoration: none;
+ }
+
+ .colorBlack
+ {
+    color: black;
+ }
